# APItester-APITesting_Platform_SAAS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  beeceptor-spec.yaml  demo-spec.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
aitester/: __init__.py
aitester/ai/: __init__.py  business_logic.py  client.py  failure_analyzer.py  prompts.py  risk_scorer.py  validators.py
aitester/api/: dependencies.py  main.py  middleware.py
aitester/api/routes/: projects.py  test_runs.py
aitester/api/schemas/: project.py  test_run.py
aitester/api/v1/: reports.py
aitester/cli/: __init__.py  app.py
aitester/cli/commands/: analyze.py  report.py  run.py
aitester/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
aitester/db/: __init__.py  base.py  session.py
aitester/db/models/: __init__.py  project.py  report.py  test_case.py  test_result.py  test_run.py
aitester/executor/: __init__.py  http_client.py  runner.py
aitester/generators/: __init__.py  ai_logic.py  base.py  coordinator.py  edge.py  functional.py
aitester/parser/: __init__.py  models.py  openapi.py  parser.py
aitester/reports/: __init__.py  html_generator.py  json_generator.py  metrics.py
aitester/reports/templates/: report.html.j2
aitester/security/: __init__.py  detector.py  generator.py  scorer.py
aitester/security/payloads/: __init__.py  command_injection.py  jwt_attacks.py  path_traversal.py  sqli.py  xss.py
alembic/: env.py
alembic/versions/: 2f46f9030cc0_initial_schema.py  a3c9e1f52b08_add_missing_columns.py
docker/: Dockerfile  docker-compose.yml
docker/init-scripts/: .gitkeep
docs/: architecture.md
scripts/: demo.sh
tests/: conftest.py
tests/fixtures/: mock_api.py  simple_api.yaml
tests/integration/: test_api_complete.py  test_e2e_demo.py  test_run_pipeline.py
tests/unit/: test_ai_generator.py  test_ai_validators.py  test_api_projects.py  test_config.py  test_executor.py  test_failure_analyzer.py  test_generators.py  test_infrastructure.py  test_models.py  test_parser.py  test_reports.py  test_security_payloads.py  test_security_scorer.py
